--- a/css/style-soft.css
+++ b/css/style-soft.css
@@ -140,7 +140,7 @@ nav ul li {
 /*ОСНОВНАЯ ЧАСТЬ*/
 
 .image-1 {
-  height: 558px;
+  height: 552px;
   width: 100%;
   background: #66CCFF url("../img/soft-nlbb.png");
   margin-top: 60px;
@@ -151,7 +151,13 @@ nav ul li {
   text-align: center; /* Выравнивание по центру */ 
 }
 
-/*МИССИЯ СТУДИИ*/
+/*ЗАГОЛОВОК*/
+
+.clearfix::after {
+  display: table;
+  content: "";
+  clear: both;
+}
 
 .block-1 {
   margin-top: 40px;
@@ -159,13 +165,75 @@ nav ul li {
   color: white;
 }
 
-.block-2 {
+/*ФОТКИ*/
+
+.block-2{
   margin-top: 30px;
   margin-bottom: 30px;
-  color: white;
+}
+
+.soft-image-1 {
+  float: left;
+  margin-left: 25px;
+  border-radius: 10px;
+}
+
+.soft-image-2 {
+  float: left;
+  margin-left: 15px;
+  border-radius: 10px;
+}
+
+.soft-image-3 {
+  float: left;
+  margin-left: 15px;
+  border-radius: 10px;
+}
+
+/*ТЕКСТ*/
+
+.block-3 {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  color: black;
+  text-transform: none;
+  text-align: justify;
+  text-indent: 15px;
+}
+
+.white-block{
+  background-color: white;
+  margin: 20px;
+  padding: 15px;
+  border-radius: 20px;
+}
+
+ol li {
+  text-transform: none;
+  margin: 10px 0px;
+  text-align: justify;
 }
 
 
+/*Кнопка скачать прогу*/
+
+.nlbb-download-link {
+  display: inline-block;
+  margin: 20px 0px 20px 270px;
+  padding: 10px 25px;
+  text-decoration: none;
+  color: #fff;
+  background-color: #051471;
+  border-radius: 5px;
+}
+
+.nlbb-download-link:hover {
+  background-color: #4458D6;
+}
+
+.nlbb-download-link:active span {
+  opacity: 0.5;
+}
 
 /*РАЗДЕЛИТЕЛЬНАЯ ПОЛОСКА*/
 
@@ -305,152 +373,167 @@ hr::after {
   color: #bdbbbc;
 }
 
+
+
 /* ЧЕСТНО СПИЖЖЕННЫЙ КОД ДЛЯ ПОПАПОВ ФОТОК */
 /* Базовые стили слоя затемнения и модального окна  */
 .overlay {
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 10;
-    display: none;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 10;
+  display: none;
 /* фон затемнения */
-    background-color: rgba(0, 0, 0, 0.65);
-    position: fixed; /* фиксированное поцизионирование */
-    cursor: default; /* тип курсара */
+  background-color: rgba(0, 0, 0, 0.65);
+  position: fixed; /* фиксированное поцизионирование */
+  cursor: default; /* тип курсара */
 }
+
 /* активируем слой затемнения */
 .overlay:target {
-    display: block;
+  display: block;
 }
+
 /* стили модального окна */
 .popup {
-    top: -100%;
-    right: 0;
-    left: 50%;
-    font-size: 14px;
-    z-index: 20;
-    margin: 0;
-    width: 85%;
-    min-width: 320px;
-    max-width: 800px;
+  top: -100%;
+  right: 0;
+  left: 50%;
+  font-size: 14px;
+  z-index: 20;
+  margin: 0;
+  width: 85%;
+  min-width: 320px;
+  max-width: 1000px;
 /* фиксированное позиционирование, окно стабильно при прокрутке */
-    position: fixed;
-    padding: 15px;
-    border: 1px solid #383838;
-    background: #fefefe;
+  position: fixed;
+  padding: 15px;
+  border: 1px solid #383838;
+  background: #fefefe;
 /* скругление углов */
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -ms-border-radius: 4px;
-    border-radius: 4px;
-    font: 14px/18px 'Tahoma', Arial, sans-serif;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  border-radius: 4px;
+  font: 14px/18px 'Tahoma', Arial, sans-serif;
 /* внешняя тень */
-    -webkit-box-shadow: 0 15px 20px rgba(0,0,0,.22),0 19px 60px rgba(0,0,0,.3);
-    -moz-box-shadow: 0 15px 20px rgba(0,0,0,.22),0 19px 60px rgba(0,0,0,.3);
-    -ms-box-shadow: 0 15px 20px rgba(0,0,0,.22),0 19px 60px rgba(0,0,0,.3);
-    box-shadow: 0 15px 20px rgba(0,0,0,.22),0 19px 60px rgba(0,0,0,.3);
-    -webkit-transform: translate(-50%, -500%);
-    -ms-transform: translate(-50%, -500%);
-    -o-transform: translate(-50%, -500%);
-    transform: translate(-50%, -500%);
-    -webkit-transition: -webkit-transform 0.6s ease-out;
-    -moz-transition: -moz-transform 0.6s ease-out;
-    -o-transition: -o-transform 0.6s ease-out;
-    transition: transform 0.6s ease-out;
+  -webkit-box-shadow: 0 15px 20px rgba(0,0,0,.22),0 19px 60px rgba(0,0,0,.3);
+  -moz-box-shadow: 0 15px 20px rgba(0,0,0,.22),0 19px 60px rgba(0,0,0,.3);
+  -ms-box-shadow: 0 15px 20px rgba(0,0,0,.22),0 19px 60px rgba(0,0,0,.3);
+  box-shadow: 0 15px 20px rgba(0,0,0,.22),0 19px 60px rgba(0,0,0,.3);
+  -webkit-transform: translate(-50%, -500%);
+  -ms-transform: translate(-50%, -500%);
+  -o-transform: translate(-50%, -500%);
+  transform: translate(-50%, -500%);
+  -webkit-transition: -webkit-transform 0.6s ease-out;
+  -moz-transition: -moz-transform 0.6s ease-out;
+  -o-transition: -o-transform 0.6s ease-out;
+  transition: transform 0.6s ease-out;
 }
+
 /* активируем модальный блок */
 .overlay:target+.popup {
-    -webkit-transform: translate(-50%, 0);
-    -ms-transform: translate(-50%, 0);
-    -o-transform: translate(-50%, 0);
-    transform: translate(-50%, 0);
-    top: 20%;
+  -webkit-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+  -o-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
+  top: 12%;
 }
+
 /* формируем кнопку закрытия */
 .close {
-    top: -10px;
-    right: -10px;
-    width: 30px;
-    height: 25px;
-    position: absolute;
-    padding: 5px 0px 0px 0px;
-    border: 2px solid #ccc;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    -ms-border-radius: 15px;
-    -o-border-radius: 15px;
-    border-radius: 15px;
-    background-color: blue;
-    -webkit-box-shadow: 0px 0px 10px #000;
-    -moz-box-shadow: 0px 0px 10px #000;
-    box-shadow: 0px 0px 10px #000;
-    text-align: center;
-    text-decoration: none;
-    font: 13px/20px 'Tahoma', Arial, sans-serif;
-    font-weight: bold;
-    -webkit-transition: all ease .8s;
-    -moz-transition: all ease .8s;
-    -ms-transition: all ease .8s;
-    -o-transition: all ease .8s;
-    transition: all ease .8s;
+  top: -10px;
+  right: -10px;
+  width: 30px;
+  height: 25px;
+  position: absolute;
+  padding: 5px 0px 0px 0px;
+  border: 2px solid #ccc;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+  border-radius: 15px;
+  background-color: blue;
+  -webkit-box-shadow: 0px 0px 10px #000;
+  -moz-box-shadow: 0px 0px 10px #000;
+  box-shadow: 0px 0px 10px #000;
+  text-align: center;
+  text-decoration: none;
+  font: 13px/20px 'Tahoma', Arial, sans-serif;
+  font-weight: bold;
+  -webkit-transition: all ease .8s;
+  -moz-transition: all ease .8s;
+  -ms-transition: all ease .8s;
+  -o-transition: all ease .8s;
+  transition: all ease .8s;
 }
+
 .close:before {
-    color: rgba(255, 255, 255, 0.9);
-    content: "X";
-    text-shadow: 0 -1px rgba(0, 0, 0, 0.9);
-    font-size: 18px;
+  color: rgba(255, 255, 255, 0.9);
+  content: "X";
+  text-shadow: 0 -1px rgba(0, 0, 0, 0.9);
+  font-size: 18px;
 }
+
 .close:hover {
-    background-color: rgba(252, 20, 0, 0.8);
-    -webkit-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);    
+  background-color: rgba(252, 20, 0, 0.8);
+  -webkit-transform: rotate(360deg);
+  -moz-transform: rotate(360deg);
+  -ms-transform: rotate(360deg);
+  -o-transform: rotate(360deg);
+  transform: rotate(360deg);  
 }
+
 /* изображения внутри окна */
 .popup img {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
+
 /* миниатюры слева/справа */
 .pic-left, 
 .pic-right {
-    width: 25%;
-    height: auto;
+  width: 25%;
+  height: auto;
 }
+
 .pic-left {
-    float: left;
-    margin: 5px 15px 5px 0;
+  float: left;
+  margin: 5px 15px 5px 0;
 }
+
 .pic-right {
-    float: right;
-    margin: 5px 0 5px 15px;
+  float: right;
+  margin: 5px 0 5px 15px;
 }
+
 /* элементы м-медиа, фреймы */
 .popup embed, 
 .popup iframe {
-    top: 0;
-    right: 0;
-    bottom: 0; 
-    left: 0; 
-    display:block;
-    margin: auto;
-    min-width: 320px;
-    max-width: 600px;
-    width: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0; 
+  left: 0; 
+  display:block;
+  margin: auto;
+  min-width: 320px;
+  max-width: 600px;
+  width: 100%;
 }
+
 .popup h2 { /* заголовок 2 */
-    margin: 0;
-    color: #008000;
-    padding: 5px 0px 10px;
-    text-align: left;
-    text-shadow: 1px 1px 3px #adadad;
-    font-weight: 500;
-    font-size: 1.4em;
-    font-family: 'Tahoma', Arial, sans-serif;
-    line-height: 1.3;
+  margin: 0;
+  color: #008000;
+  padding: 5px 0px 10px;
+  text-align: left;
+  text-shadow: 1px 1px 3px #adadad;
+  font-weight: 500;
+  font-size: 1.4em;
+  font-family: 'Tahoma', Arial, sans-serif;
+  line-height: 1.3;
 }
+
 /* параграфы */
 .popup p {margin: 0; padding: 5px 0}
