--- a/css/style-contacts.css
+++ b/css/style-contacts.css
@@ -174,6 +174,14 @@ nav ul li {
   margin-left: 40px;
 }
 
+.twit-group {
+  float: left;
+  width: 400px;
+  height: 600px;
+  margin-left: 40px;
+  margin-top: 20px;
+}
+
 /*ОСНОВНАЯ ЧАСТЬ*/
 
 .image-1 {
