--- a/css/style-contacts.css
+++ b/css/style-contacts.css
@@ -19,11 +19,13 @@ h1 {
 h2 {
   font-size: 24px;
   font-weight: 700;
+  letter-spacing: 1.1px;
 }
 
 h3{
   text-transform: none;
   font-size: 24px;
+  letter-spacing: 1.1px;
 }
 
 a {
