--- a/css/style-games.css
+++ b/css/style-games.css
@@ -10,6 +10,7 @@ body {
   color: black;
   /*background: linear-gradient(to top, #269926, #008500);*/
   background-color: #051471;
+  zoom: 75%;
 }
 
 h1 {
