--- a/css/style-games.css
+++ b/css/style-games.css
@@ -166,7 +166,7 @@ nav ul li {
 .image-1 {
   height: 552px;
   width: 100%;
-  background: #66CCFF url("../img/soft-nlbb.png");
+  background: #66CCFF url("../img/soft-nlbb.jpg");
   margin-top: 60px;
   background-size: 100%;
 }
