--- a/css/style-contacts.css
+++ b/css/style-contacts.css
@@ -204,7 +204,7 @@ nav ul li {
 .image-1 {
   height: 575px;
   width: 100%;
-  background: #66CCFF url("../img/background-photo.png");
+  background: #66CCFF url("../img/background-photo.jpg");
   margin-top: 60px;
   background-size: 100%
 }
