--- a/css/style-contacts.css
+++ b/css/style-contacts.css
@@ -10,6 +10,10 @@ body {
   color: black;
   background-color: #051471;
   zoom: 75%;
+  background-image: url("../img/nature.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 h1 {
@@ -56,6 +60,10 @@ a {
   margin: auto;
   margin-top: 6px;
   background: #4458D6;
+  border: 3px solid black;
+  border-top-style: none;
+  border-bottom-style: none;
+  box-sizing: border-box;
 }
 
 .main-footer-page {
@@ -65,6 +73,10 @@ a {
   opacity: 0.9;
   margin-top: -6px;
   z-index: 1;
+  margin-bottom: 900px;
+  border: 3px solid black;
+  border-top-style: none;
+  box-sizing: border-box;
 }
 
 
@@ -90,6 +102,10 @@ a {
   width: inherit;
   opacity: 0.85;
   z-index: 100;
+  border: 3px solid black;
+  border-top-style: none;
+  border-bottom-style: none;
+  box-sizing: border-box;
 }
 
 nav ul {
@@ -111,8 +127,12 @@ nav ul li {
   font-size: 18px;
 }
 
+.link-first {
+  margin-left: 85px;
+} 
+
 .link {
-  margin-left: 90px;
+  margin-left: 60px;
 } 
 
 .main-navigation ul li a:hover {
