--- a/css/style-soft.css
+++ b/css/style-soft.css
@@ -175,7 +175,7 @@ nav ul li {
 .image-1 {
   height: 552px;
   width: 100%;
-  background: #66CCFF url("../img/soft-nlbb.jpg");
+  background: #66CCFF url("../img/background-soft.jpg");
   margin-top: 60px;
   background-size: 100%;
 }
