--- a/css/style-contacts.css
+++ b/css/style-contacts.css
@@ -224,7 +224,7 @@ nav ul li {
 .image-1 {
   height: 575px;
   width: 100%;
-  background: #66CCFF url("../img/background-photo.jpg");
+  background: #66CCFF url("../img/background-contacts.jpg");
   margin-top: 60px;
   background-size: 100%
 }
