--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,6 @@ nav ul li {
   padding: 18px 0px;
   text-decoration: none;
   color: white;
-  font-size: 18px;
   letter-spacing: 2.5px;
   text-transform: none;
   font-size: 21px;
@@ -217,12 +216,20 @@ nav ul li {
 
 .eng-switch {
   margin: 470px 25px 0px 0px; 
+  border-bottom: 8px solid white;
+  border-right: 4px solid white;
 }
 
 .rus-switch {
   position: relative; 
   margin: 365px 25px 0px 0px;
   left: 160px;
+  border-bottom: 8px solid white;
+  border-right: 4px solid white;
+}
+
+.switch-activated {
+  text-decoration: underline;
 }
 
 /*МИССИЯ СТУДИИ*/
