--- a/css/style-games-eng.css
+++ b/css/style-games-eng.css
@@ -129,7 +129,7 @@ nav ul li {
 } 
 
 .link {
-  margin-left: 60px;
+  margin-left: 68px;
 } 
 
 .main-navigation ul li a:hover {
@@ -174,6 +174,53 @@ nav ul li {
 
 .fig {
   text-align: center; /* Выравнивание по центру */ 
+}
+
+.switch-lang {
+  float: right; 
+  text-decoration: none;
+  color: #fff;
+  background-color: #051471;
+  border-radius: 40px 5px;
+  text-align: center;
+  opacity: 0.75;
+  text-transform: none;
+}
+
+.switch-lang p {
+  text-align: center;
+  margin: 0px;
+  padding: 20px 40px;
+  line-height: 1.5;
+  font-size: 32px;
+  letter-spacing: 1.5px;
+}
+
+.switch-lang:hover {
+  background-color: #4458D6;
+  color: white !important;
+}
+
+.switch-lang:active p {
+  opacity: 0.5;
+}
+
+.eng-switch {
+  margin: 445px 25px 0px 0px; 
+  border-bottom: 8px solid white;
+  border-right: 4px solid white;
+}
+
+.rus-switch {
+  position: relative; 
+  margin: 330px 25px 0px 0px;
+  left: 160px;
+  border-bottom: 8px solid white;
+  border-right: 4px solid white;
+}
+
+.switch-activated {
+  text-decoration: underline;
 }
 
 .clearfix::after {
